--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -13,7 +13,7 @@
 
 
 @mixin bg-img($img)
-  background-image: url('../Projeto-Galeria/img/#{ $img }') 
+  background-image: url('../img/#{ $img }') 
   background-size: 100%
   background-position: center
   background-repeat: no-repeat
